Исправления по результатам первой итерации проверки ДЗ№5